add login, register and change password pages

--- a/VenusNinja/index.html
+++ b/VenusNinja/index.html
@@ -15,6 +15,7 @@
   </head>
   <body ng-app="TaskNinjaApp">
 
+    <div ng-include="'views/nav.html'"></div>
     <div class="jumbotron">
         <div ng-view=""></div>    
     </div>
@@ -33,7 +34,6 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-material-design/0.2.1/js/material.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-material-design/0.2.1/js/ripples.js"></script>
 
-
     <script>
         $(document).ready(function() {
             $.material.init();
@@ -42,6 +42,8 @@
 
     <script src="scripts/app.js"></script>
     <script src="scripts/task.js"></script>
+    
+    <div ng-include="'views/partials/changepass.html'"></div>
 
 </body>
 </html>
